<resources>
    <string name="app_name">OneCal</string>
    <string name="action_settings">Settings</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="importance">Importance Level</string>
    <string name="title_activity_groups_edit">1Cal Groups</string>
    <string name="light_importance">Low importance</string>
    <string name="medium_importance">Medium importance</string>
    <string name="urgent_importance">Urgent</string>
    <string name="choose_importance">Choose level of importance</string>
    <string name="fingerprint_subtitle">Events data</string>
    <string name="people_fingerprint_subtitle">Contacts data</string>
    <string name="fingerprint_desc">OneCal keeps your data secure and locks it with your own biometrics.</string>
    <string name="create_event_dialog">Create an event</string>
    <string name="create_event_fail">Creating the event failed</string>
    <string name="create_event_success">Event added</string>
    <string name="event_name">Event title</string>
    <string name="create_event_ok">OK</string>
    <string name="create_event_cancel">Cancel</string>
    <string name="all_tab_name">All</string>
    <string name="repeat_hour">Hour</string>
    <string name="repeat_day">Day</string>
    <string name="repeat_minute">Minute</string>
    <string name="repeat_week">Week</string>
    <string name="repeat_month">Month</string>
    <string name="repeat_year">Year</string>
    <string name="repetitions_num">Frequency of repeating</string>
    <string name="enter_num">Enter number</string>
    <string name="every_repeat">Every %1$s %2$s(s)</string>
    <string name="reminder_title_blank">Reminder title cannot be blank!</string>
    <string name="alarm_time_is">Alarm time is %1$d</string>
    <string name="date_not_set">Date not set</string>
    <string name="repeat_not_set">Repeat not set</string>
    <string name="repeat_is_off">Repeat is off</string>
    <string name="groups">Groups</string>
    <string name="edit_groups">Edit Groups</string>
    <string name="add_group">Add a new group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="delete_group">Are you sure you want to delete group %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="events">Events</string>
    <string name="people">People</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About this app</string>
    <string name="more">Additional options</string>
    <string name="select_type">Select Type</string>
    <string name="repeat_on_outside">On</string>
    <string name="repeat_off_outside">Off</string>
    <string name="all_empty">Welcome to 1Cal! Add a group from the menu in the top right corner and then create an event from the new group.</string>
    <string name="title_activity_annoying_alarm">1Cal Reminder</string>
    <string name="mark_complete">Mark as completed</string>
    <string name="ignore">Ignore for now</string>
    <string name="dont_forget">Don\'t forget your events!</string>
    <string name="about_text1">An app to help you organize your daily life with less of a hassle. This is 1Cal. This app is a project, participating in the National IT Olympiad (Bulgaria). Developed by Nicola Nicolov and Ognyan Arsov.</string>
    <string name="close_window">Close</string>
    <string name="go_back">Back</string>
    <string name="people_title">People</string>
    <string name="no_contacts">There are no contacts in this group. Assign contacts to it by clicking the menu icon at the top right and using the Assign Contacts option.</string>
    <string name="no_people_found">There are no contacts found on this device. You can add them via your system contacts app. If this is a mistake, check 1Cal contacts permission in Settings.</string>
    <string name="assign_contact_text">Assign Contacts</string>
    <string name="title_activity_assign_contact" translatable="false">AssignContactActivity</string>
    <string name="no_changes_assign_contact">Your changes were not saved.</string>
    <string name="select_group_first">Select a group to assign contacts in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="event_fingerprint_summary_off">Event fingerprint protection is disabled</string>
    <string name="event_fingerprint_summary_on">Event fingerprint protection is enabled</string>
    <string name="event_fingerprint_title">Lock Events with Fingerprint</string>
    <string name="event_people_summary_off">Contacts fingerprint protection is disabled</string>
    <string name="event_people_summary_on">Contacts fingerprint protection is enabled</string>
    <string name="event_people_title">Lock Contacts with Fingerprint</string>
    <string name="calendar_mode_title">Calendar Mode</string>
    <string name="calendar_mode_summary">This feature allows you to semi-automatically create calendar events along with OneCal events</string>
    <string name="title_activity_contact_view" translatable="false">ContactViewActivity</string>
    <string name="tag_person">Tag People</string>
    <string name="saved_to_onecal">Saved to OneCal</string>
    <string name="title_activity_tag_contact">Tag People</string>
    <string name="no_archived_events">No archived events</string>
    <string name="archived_events">Archived Events</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="no_events_with_this_person">You have not created any events with this contact. Tag them in an existing event or create a new one by clicking on the button in the bottom right.</string>
    <string name="archived_people">Archived Contacts</string>
    <string name="no_archived_contacts">You don\'t have any archived contacts. Any grouped contacts that you accidentally delete from your phone can be found here.</string>
    <string name="what_to_do_archived_contact">Choose an action for the selected contact</string>
    <string name="restore_archived_contact">Restore</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="tagged_contacts">Event with Tagged People</string>
    <string name="email">Send E-mail</string>
    <string name="no_email_found">no e-mail address available</string>
    <string name="contact_permission_needed">Contact permission is required in order to use the People module</string>
    <string name="name_or_nickname">Name or nickname</string>
    <string name="required_name">This is a required field. Remember: you don\'t have to use your real name.</string>
    <string name="required_message">This is a required field.</string>
    <string name="data_sent">Your message was sent and we\'ll get back to you soon!</string>
    <string name="help_title">More Information</string>
    <string name="help_desc">You can ask a question or leave a suggestion here. Leaving an e-mail address is not required but it\'s useful to get a saved copy of your conversation. You will receive replies to your messages through notifications and e-mails (if available).</string>
    <string name="email_feedback">E-mail Address</string>
    <string name="send_button">Send</string>
    <string name="more_info">Learn More</string>
    <string name="qr_code_generate">Generate QR Code</string>
    <string name="fingerprint_exit">Exit</string>
    <string name="fingerprint_desc_settings">To change this setting, you must confirm via biometrics.</string>
    <string name="fingerprint_subtitle_settings">Security Settings</string>
    <string name="forbidden_chars_group_name">This name contains a forbidden character sequence</string>
    <string name="problem_text_detection">There was a problem in detecting text.</string>
    <string name="set_a_reminder_voice">set a reminder</string>
    <string name="for_time">for</string>
    <string name="with_title">titled</string>
    <string name="one_number">one</string>
    <string name="two_number">two</string>
    <string name="three_number">three</string>
    <string name="four_number">four</string>
    <string name="five_number">five</string>
    <string name="six_number">six</string>
    <string name="seven_number">seven</string>
    <string name="eight_number">eight</string>
    <string name="nine_number">nine</string>
    <string name="ten_number">ten</string>
    <string name="eleven_number">eleven</string>
    <string name="twelve_number">twelve</string>
    <string name="and_a_half">and a half</string>
    <string name="am_time">a.m.</string>
    <string name="pm_time">p.m.</string>
    <string name="repeat_until">Repeat Until</string>
    <string name="and_call">and call</string>
    <string name="open_contacts">open contacts</string>
    <string name="open_settings">open settings</string>
    <string name="and_show">and show</string>
    <string name="invalid_command">Wrong or invalid voice command</string>
    <string name="general">General</string>
    <string name="use_light_icon_summary">By default OneCal uses a dark home screen icon but you can change it to the light variant by enabling this switch</string>
    <string name="use_light_icon">Use Light app icon</string>
    <string name="smart_config_summary">When enabled, Smart Config automatically checks for parallel events, and reminds you if you\'re trying to set a reminder for a busy time period. (Might affect performance)</string>
    <string name="smart_config_title">Smart Config</string>
    <string name="full_screen_notifications_summary">Full Screen notifications intrude your screen, so that you never miss important events. It slowly increases your alarm volume and even vibrates, in case you don\'t notice it. Disabling this feature provides a limited experience.</string>
    <string name="full_screen_notifications_title">Full Screen Notifications</string>
    <string name="empty_location">Leave blank to disable, tap icon for current</string>
    <string name="location_permission_needed">Location permission is necessary to gain current location</string>
    <string name="directions">Get directions</string>
    <string name="directions_selected">Directions Enabled</string>
</resources>