<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is dзistributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/events">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="event_fingerprint"
            app:summaryOff="@string/event_fingerprint_summary_off"
            app:summaryOn="@string/event_fingerprint_summary_on"
            app:title="@string/event_fingerprint_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="calendar_mode"
            app:summary="@string/calendar_mode_summary"
            app:title="@string/calendar_mode_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/people_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="people_fingerprint"
            app:summaryOff="@string/event_people_summary_off"
            app:summaryOn="@string/event_people_summary_on"
            app:title="@string/event_people_title" />

    </PreferenceCategory>

</PreferenceScreen>
