<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cal"
            android:icon="@drawable/ic_date"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_contacts"
            android:title="@string/people" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
